Updating README.md on the jdk 17 issues